# libusb4java

./: .gitignore  .project  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  configure.ac  pom.xml  travis-autogen.sh
.cmake/Modules/: FindLibUdev.cmake  FindLibUsb.cmake
dists/: README.md  bundle
dists/darwin/: build
dists/linux/: Dockerfile  Dockerfile.arm  README.md  build  build-all  build-arm
dists/win32/: build-all.bat  build.bat
src/: BosDescriptor.c  BosDescriptor.h  BosDevCapabilityDescriptor.c  BosDevCapabilityDescriptor.h  CMakeLists.txt  ConfigDescriptor.c  ConfigDescriptor.h  ContainerIdDescriptor.c  ContainerIdDescriptor.h  Context.c  Context.h  Device.c  Device.h  DeviceDescriptor.c  DeviceDescriptor.h  DeviceHandle.c  DeviceHandle.h  DeviceList.c  DeviceList.h  EndpointDescriptor.c  EndpointDescriptor.h  HotplugCallbackHandle.c  HotplugCallbackHandle.h  Interface.c  Interface.h  InterfaceDescriptor.c  InterfaceDescriptor.h  IsoPacketDescriptor.c  IsoPacketDescriptor.h  LibUsb.c  Makefile.am  Pollfd.c  Pollfd.h  Pollfds.c  Pollfds.h  SsEndpointCompanionDescriptor.c  SsEndpointCompanionDescriptor.h  SsUsbDeviceCapabilityDescriptor.c  SsUsbDeviceCapabilityDescriptor.h  Transfer.c  (+8 more)
