cmake_minimum_required(VERSION 2.8)
project(usb4java C)
set(PROJECT_VERSION 1.2.1)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/.cmake/Modules/")
if(CMAKE_COMPILER_IS_GNUCC)
    set(CMAKE_C_FLAGS "-Wall -Werror -std=c99")
    set(CMAKE_SHARED_LINKER_FLAGS "-lrt -lpthread")
endif()
if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    find_package(LibUdev)
endif()
find_package(LibUsb REQUIRED)
find_package(JNI REQUIRED)
include_directories(${LibUsb_INCLUDE_DIR})
include_directories(${JNI_INCLUDE_DIRS})
add_definitions(-DSIZEOF_VOID_P=${CMAKE_SIZEOF_VOID_P})
add_subdirectory(src)
