file(GLOB_RECURSE USB4JAVA_SOURCES *.c)
add_library(usb4java SHARED ${USB4JAVA_SOURCES})
if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
   target_link_libraries(usb4java ${LibUsb_LIBRARIES} ${LibUdev_LIBRARIES})
else()
   target_link_libraries(usb4java ${LibUsb_LIBRARIES})
endif()
install(TARGETS usb4java DESTINATION lib)
